Change skywalker config file

--- a/models/skywalker_x8/model.config
+++ b/models/skywalker_x8/model.config
@@ -1,15 +1,17 @@
 <?xml version="1.0"?>
 <model>
-  <name>Standard VTOL</name>
+  <name>Skywalker X8</name>
   <version>1.0</version>
   <sdf version='1.10'>model.sdf</sdf>
 
   <author>
+   <name>Ingeborg Aarnes</name>
+   <email>ingebota@stud.ntnu.no</email>
    <name>Roman Bapst</name>
    <email>roman@px4.io</email>
   </author>
 
   <description>
-    This is a model of a standard VTOL quad plane.
+    This is a model of a standard VTOL quad plane, based on the standard VTOL quad plane model.
   </description>
 </model>
