--- a/models/skywalker_x8_new/model.config
+++ b/models/skywalker_x8_new/model.config
@@ -12,6 +12,6 @@
   </author>
 
   <description>
-    This is a model of a Skywalker X8, based on the standard VTOL quad plane model.
+    This is a model of a standard VTOL quad plane, based on the standard VTOL quad plane model.
   </description>
 </model>
