Add contents to the new Skywalker model

--- a/models/skywalker_x8_new/model.config
+++ b/models/skywalker_x8_new/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-  <name>Skywalker X8</name>
+  <name>Skywalker X8 New</name>
   <version>1.0</version>
   <sdf version='1.10'>model.sdf</sdf>
 
@@ -12,6 +12,6 @@
   </author>
 
   <description>
-    This is a model of a standard VTOL quad plane, based on the standard VTOL quad plane model.
+    This is a model of a Skywalker X8, based on the standard VTOL quad plane model and the data from JSBSim.
   </description>
 </model>
